--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -26,6 +26,11 @@
 	-webkit-text-size-adjust: 100%;
 }
 
+html,
+body {
+	scroll-behavior: smooth;
+}
+
 * {
 	margin: 0px;
 	padding: 0px;
@@ -35,7 +40,7 @@
 a {
 	color: inherit;
 	font-weight: 500;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 img {
