--- a/src/pages/root/index.scss
+++ b/src/pages/root/index.scss
@@ -1,103 +1,83 @@
-.header-container {
-  z-index: 100;
-  width: 100%;
-  height: 80px;
+.header-wrapper {
+	position: relative;
 
-  display: flex;
-  align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
+	.header-container {
+		z-index: 100;
+		width: 100%;
 
-  background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-gray-light);
-  transform: translateY(-80px);
+		position: sticky;
+		top: 0;
+		left: 0;
 
-  &.show-header {
-    animation: showTopSearch 500ms ease 0s 1 forwards;
-  }
+		background-color: var(--color-white);
+		border-bottom: 1px solid var(--color-gray-light);
 
-  .primary-navigation-container {
-    width: 90%;
-    margin: auto;
+		.primary-navigation-container {
+			width: 90%;
+			margin: auto;
+			padding: 1rem 0;
 
-    display: flex;
-    align-items: center;
+			display: flex;
+			align-items: center;
+			column-gap: 1rem;
 
-    .logo-container {
-      max-width: 35px;
-      margin-right: 2rem;
+			.logo-container {
+				max-width: 45px;
+				display: flex;
+				align-items: center;
 
-      .logo {
-        max-width: 30px;
-        border-radius: 50%;
-      }
-    }
+				.logo {
+					max-width: 45px;
+				}
+			}
 
-    .primary-navigation-form {
-      width: 70%;
-      max-width: 450px;
-      color: var(--color-gray);
+			.primary-navigation-form {
+				width: 80%;
+				max-width: 1240px;
+				color: var(--color-gray);
 
-      position: relative;
+				position: relative;
 
-      input[type='text'] {
-        padding: 0.8rem 0.25rem 0.8rem 3rem;
-        font-size: 0.6rem;
+				input[type='text'] {
+					padding: 0.8rem 0.25rem 0.8rem 3rem;
+					font-size: 0.8rem;
 
-        border-radius: 8px;
-        border: 1px solid var(--color-gray);
-        background-color: var(--color-gray-light);
-      }
+					border-radius: 1.5rem;
+					border: 1px solid var(--color-gray);
+					background-color: var(--color-gray-light);
+					box-shadow: 1px 1px 1px var(--color-gray-light);
+				}
 
-      button[type='submit'] {
-        padding: 0.25rem 0.5rem;
+				button[type='submit'] {
+					padding: 0.25rem 0.5rem;
 
-        background-color: transparent;
-        position: absolute;
-        top: 50%;
-        left: 1.5%;
+					background-color: transparent;
+					position: absolute;
+					top: 50%;
+					left: 1.5%;
 
-        transform: translateY(-50%);
-        cursor: pointer;
+					transform: translateY(-48%);
+					cursor: pointer;
 
-        &.material-symbols-outlined {
-          color: var(--color-gray-dark);
-        }
-      }
-    }
-  }
-}
-
-.main-container {
-  padding-top: 90px;
+					&.material-symbols-outlined {
+						color: var(--color-gray-dark);
+					}
+				}
+			}
+		}
+	}
 }
 
 @media screen and (min-width: 768px) {
-  .header-container {
-    .primary-navigation-container {
-      .logo-container {
-        margin-right: 3rem;
-
-        .logo {
-          max-width: 40px;
-        }
-      }
-
-      .primary-navigation-form {
-        max-width: 650px;
-
-        input[type='text'] {
-          border-radius: 8px;
-          font-size: 0.8rem;
-        }
-      }
-    }
-  }
-}
-
-@keyframes showTopSearch {
-  100% {
-    transform: translateY(0px);
-  }
+	.header-wrapper {
+		.header-container {
+			.primary-navigation-container {
+				.primary-navigation-form {
+					input[type='text'] {
+						padding-left: 4rem;
+					}
+				}
+			}
+		}
+	}
 }
