--- a/src/pages/user/index.scss
+++ b/src/pages/user/index.scss
@@ -13,6 +13,7 @@
 
 		.image-wrapper {
 			max-width: 120px;
+			margin-right: 1.5rem;
 
 			img {
 				border-radius: 50%;
@@ -125,7 +126,6 @@
 			.image-wrapper {
 				width: 30%;
 				max-width: 150px;
-				margin-right: 5%;
 			}
 
 			.text-wrapper {
